--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       
-      <img>
+      <img src="images/transportation/transit.jpg" alt=
         
     </div>
   </div>
